cert-manager/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: https
      traefik.ingress.kubernetes.io/router.tls: "true"
    creationTimestamp: "2021-12-27T16:07:11Z"
    generation: 1
    name: traefik
    namespace: kube-system
    resourceVersion: "1055981"
    uid: 01274088-242b-488d-b2d3-52d74af290e8
  spec:
    rules:
    - host: ingress.home.juli.sh
      http:
        paths:
        - backend:
            service:
              name: traefik
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - ingress.home.juli.sh
      secretName: ingeress-tls
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
